--- a/weibo.scss
+++ b/weibo.scss
@@ -157,13 +157,70 @@ body {
   }
 }
 
+// 换一换
+body {
+  .WB_cardtitle_a .opt_box, .WB_cardtitle_b .opt_box {
+    font-size: 14px;
+  }
+}
 
 // 查看更多
 body {
   .more_txt {
     font-size: 14px;
   }
+  .WB_cardmore {
+    line-height:48px;
+    height:48px;
+  }
 }
+
+// feed
+body {
+  .WB_info {
+    margin-bottom:10px;
+  }
+  .WB_media_wrap {
+    margin-top: 10px;
+    margin-bottom: 16px;
+  }
+  .WB_from {
+    font-size:14px;
+  }
+  .WB_feed_handle .WB_row_line {
+    font-size: 14px;
+  }
+  .WB_expand {
+    padding:16px;
+  }
+}
+
+// 左边栏导航
+body {
+  .WB_left_nav .lev_Box h3.lev a{
+    font-size:16px;
+  }
+  .WB_left_nav .lev a {
+    font-size:14px;
+  }
+}
+
+// 公告栏
+body {
+  #v6_pl_rightmod_noticeboard {
+    .WB_innerwrap {
+      font-size: 14px;
+      .title a {
+        display: block;
+      }
+      .opinion_type_list {
+        margin-top: 10px;
+      }
+    }
+  }
+}
+
+// -----------------------
 
 body {
   // 隐藏广告
@@ -201,5 +258,29 @@ body {
 body {
   #v6_pl_rightmod_updatev6 {
     display: none !important;
+  }
+}
+
+
+// ------------------- 版式和颜色调整
+
+body {
+  .send_weibo {
+    margin-bottom:0;
+    border-radius: 2px 2px 0 0;
+  }
+  .WB_tab_a .tab_box .fr_box {
+    border-top-right-radius:0;
+  }
+  .WB_tab_a .tab li:first-child, .WB_tab_a .tab li:nth-child(2) {
+    border-top-left-radius:0;
+  }
+  .WB_tab_a .tab li:nth-child(2) .t {
+    border-top-left-radius:0;
+  }
+  #v6_pl_content_homefeed > div {
+    > .WB_tab_a {
+      box-shadow: -1px 0 0 rgba(0,0,0,0.04), 1px 0 0 rgba(0,0,0,0.04);
+    }
   }
 }
