完成首页区块合并

--- a/weibo.css
+++ b/weibo.css
@@ -135,16 +135,65 @@ body #v6_pl_content_publishertop .send_weibo .title_area .key {
 body #v6_pl_rightmod_updatev6 {
   display: none !important; }
 
-body .send_weibo {
-  margin-bottom: 0;
-  border-radius: 2px 2px 0 0; }
+body .WB_tab_a {
+  margin-bottom: 0; }
+body .WB_tab_a .tab li.S_bg2 {
+  box-shadow: none; }
 body .WB_tab_a .tab_box .fr_box {
-  border-top-right-radius: 0; }
+  border-bottom-right-radius: 0;
+  box-shadow: none; }
+body .WB_tab_a .tab li:nth-child(2) .b .b1 em.l i {
+  border-bottom-left-radius: 0; }
 body .WB_tab_a .tab li:first-child, body .WB_tab_a .tab li:nth-child(2) {
-  border-top-left-radius: 0; }
-body .WB_tab_a .tab li:nth-child(2) .t {
-  border-top-left-radius: 0; }
+  border-bottom-left-radius: 0; }
+body .WB_tab_a .tab li.curr {
+  background-color: #fff; }
+body .WB_tab_a .tab li.S_bg2, body .WB_tab_a .tab li.curr .b .b1 em i {
+  box-shadow: none; }
 body #v6_pl_content_homefeed > div > .WB_tab_a {
-  box-shadow: -1px 0 0 rgba(0, 0, 0, 0.04), 1px 0 0 rgba(0, 0, 0, 0.04); }
+  box-shadow: none; }
+body .WB_notes {
+  margin-bottom: 0;
+  margin-top: 0;
+  border-radius: 0;
+  padding: 0 10px 10px; }
+  body .WB_notes a {
+    background-color: #fff8bf;
+    border-radius: 2px;
+    height: 40px !important;
+    line-height: 40px !important; }
+body .WB_notes a, body .WB_notes .wrap {
+  height: 40px !important;
+  line-height: 40px !important; }
+body .WB_feed > .WB_cardwrap:first-child {
+  border-radius: 0 0 2px 2px;
+  box-shadow: -1px 0 0px rgba(0, 0, 0, 0.04), 1px 0 0px rgba(0, 0, 0, 0.04), 0 1px 0px rgba(0, 0, 0, 0.04);
+  border-top: solid 1px #F2F2F5; }
+
+body .WB_tab_a .tab li {
+  background-color: #F2F2F5; }
+body .WB_tab_a .tab li a .t {
+  background-color: #F2F2F5; }
+body .WB_tab_a .tab li a .b {
+  opacity: 0 !important; }
+body .WB_tab_a .tab li.curr {
+  background-color: #F2F2F5; }
+body .WB_notes {
+  background-color: #F2F2F5; }
+body .WB_tab_a .tab_box_a .fr_box {
+  height: 58px;
+  background-color: #F2F2F5; }
+body .WB_cardwrap[node-type=feed_list_timeTip] {
+  background-color: rgba(255, 255, 255, 0.8); }
+  body .WB_cardwrap[node-type=feed_list_timeTip] .WB_cardtitle_a {
+    height: 40px;
+    line-height: 40px;
+    font-size: 14px; }
+
+body .WB_cardtitle_b {
+  height: 58px;
+  line-height: 58px;
+  background-color: #F2F2F5;
+  border-radius: 2px 2px 0 0; }
 
 /*# sourceMappingURL=weibo.css.map */
