--- a/weibo.css
+++ b/weibo.css
@@ -43,18 +43,19 @@ body #v6_pl_rightmod_myinfo .W_person_info {
   body #v6_pl_rightmod_myinfo .W_person_info .cover {
     height: 137px; }
     body #v6_pl_rightmod_myinfo .W_person_info .cover .headpic {
-      width: 100px;
-      height: 100px;
-      margin-left: -50px;
-      bottom: 0; }
+      width: 90px;
+      height: 90px;
+      margin-left: -45px;
+      bottom: 9px; }
       body #v6_pl_rightmod_myinfo .W_person_info .cover .headpic a img {
-        width: 100px !important;
-        height: 100px !important; }
+        width: 90px !important;
+        height: 90px !important; }
     body #v6_pl_rightmod_myinfo .W_person_info .cover .icon_bed {
       top: auto;
       bottom: 3px; }
   body #v6_pl_rightmod_myinfo .W_person_info .WB_innerwrap {
-    padding-top: 10px; }
+    padding-top: 10px;
+    padding-top: 1px; }
     body #v6_pl_rightmod_myinfo .W_person_info .WB_innerwrap .nameBox {
       padding-top: 0; }
     body #v6_pl_rightmod_myinfo .W_person_info .WB_innerwrap .user_atten {
@@ -72,7 +73,8 @@ body #v6_pl_rightmod_recominfo .WB_right_expand {
   margin-right: -6px; }
   body #v6_pl_rightmod_recominfo .WB_right_expand .expand {
     padding: 14px;
-    font-size: 14px; }
+    font-size: 14px;
+    line-height: 21px; }
 
 body .apps_PCD_reco_index_right .WB_innerwrap {
   padding: 16px; }
@@ -146,8 +148,10 @@ body .WB_tab_a .tab li:nth-child(2) .b .b1 em.l i {
   border-bottom-left-radius: 0; }
 body .WB_tab_a .tab li:first-child, body .WB_tab_a .tab li:nth-child(2) {
   border-bottom-left-radius: 0; }
-body .WB_tab_a .tab li.curr {
-  background-color: #fff; }
+body .WB_tab_a .tab li.curr span.t {
+  padding-bottom: 7px; }
+body .WB_tab_a .tab li.curr span.b {
+  display: none; }
 body .WB_tab_a .tab li.S_bg2, body .WB_tab_a .tab li.curr .b .b1 em i {
   box-shadow: none; }
 body #v6_pl_content_homefeed > div > .WB_tab_a {
@@ -156,33 +160,83 @@ body .WB_notes {
   margin-bottom: 0;
   margin-top: 0;
   border-radius: 0;
-  padding: 0 10px 10px; }
+  padding: 0 10px 10px;
+  background-color: transparent;
+  box-shadow: none;
+  position: relative;
+  position: relative;
+  height: 40px; }
+  body .WB_notes:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.06);
+    pointer-events: none; }
   body .WB_notes a {
+    z-index: 2;
+    position: absolute;
     background-color: #fff8bf;
     border-radius: 2px;
     height: 40px !important;
-    line-height: 40px !important; }
+    top: 0;
+    left: 10px;
+    right: 10px;
+    line-height: 40px !important;
+    color: #a57900;
+    font-size: 14px; }
+    body .WB_notes a:hover {
+      background-color: #fff5a0;
+      color: #866300; }
+  body .WB_notes + .WB_feed {
+    margin-top: -50px; }
+    body .WB_notes + .WB_feed .WB_cardwrap {
+      padding-top: 50px; }
 body .WB_notes a, body .WB_notes .wrap {
   height: 40px !important;
   line-height: 40px !important; }
 body .WB_feed > .WB_cardwrap:first-child {
   border-radius: 0 0 2px 2px;
-  box-shadow: -1px 0 0px rgba(0, 0, 0, 0.04), 1px 0 0px rgba(0, 0, 0, 0.04), 0 1px 0px rgba(0, 0, 0, 0.04);
-  border-top: solid 1px #F2F2F5; }
+  box-shadow: -1px 0 0px rgba(0, 0, 0, 0.04), 1px 0 0px rgba(0, 0, 0, 0.04), 0 1px 0px rgba(0, 0, 0, 0.04); }
 
-body .WB_tab_a .tab li {
-  background-color: #F2F2F5; }
 body .WB_tab_a .tab li a .t {
-  background-color: #F2F2F5; }
+  position: relative; }
+  body .WB_tab_a .tab li a .t:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.06);
+    pointer-events: none; }
 body .WB_tab_a .tab li a .b {
-  opacity: 0 !important; }
-body .WB_tab_a .tab li.curr {
-  background-color: #F2F2F5; }
-body .WB_notes {
-  background-color: #F2F2F5; }
+  position: relative;
+  height: 7px; }
+  body .WB_tab_a .tab li a .b:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.06);
+    pointer-events: none; }
+  body .WB_tab_a .tab li a .b span {
+    opacity: 0 !important; }
 body .WB_tab_a .tab_box_a .fr_box {
-  height: 58px;
-  background-color: #F2F2F5; }
+  position: relative; }
+  body .WB_tab_a .tab_box_a .fr_box:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.06);
+    pointer-events: none; }
 body .WB_cardwrap[node-type=feed_list_timeTip] {
   background-color: rgba(255, 255, 255, 0.8); }
   body .WB_cardwrap[node-type=feed_list_timeTip] .WB_cardtitle_a {
@@ -193,7 +247,63 @@ body .WB_cardwrap[node-type=feed_list_timeTip] {
 body .WB_cardtitle_b {
   height: 58px;
   line-height: 58px;
-  background-color: #F2F2F5;
+  background-color: rgba(0, 0, 0, 0.06);
   border-radius: 2px 2px 0 0; }
+
+body #v6_pl_rightmod_myinfo .W_person_info .WB_innerwrap .user_atten {
+  margin-left: -13px;
+  margin-right: -13px;
+  height: 51px; }
+  body #v6_pl_rightmod_myinfo .W_person_info .WB_innerwrap .user_atten li {
+    border: 0 none !important;
+    width: 33.33333%;
+    position: relative; }
+    body #v6_pl_rightmod_myinfo .W_person_info .WB_innerwrap .user_atten li a {
+      margin: 0 3px;
+      height: 51px;
+      border-radius: 2px !important;
+      background-color: rgba(0, 0, 0, 0.06); }
+      body #v6_pl_rightmod_myinfo .W_person_info .WB_innerwrap .user_atten li a strong {
+        padding-top: 6px;
+        margin-bottom: 6px;
+        width: auto; }
+      body #v6_pl_rightmod_myinfo .W_person_info .WB_innerwrap .user_atten li a:hover {
+        background-color: rgba(0, 0, 0, 0.06); }
+body .W_person_info .WB_innerwrap {
+  padding-bottom: 1px; }
+
+body .WB_cardmore {
+  margin: 6px 6px 0;
+  background-color: rgba(0, 0, 0, 0.06);
+  border-top: 0 none;
+  position: relative;
+  top: -6px; }
+  body .WB_cardmore:hover {
+    background-color: rgba(0, 0, 0, 0.06); }
+
+body .WB_feed_handle .WB_handle .WB_row_line {
+  border-top: 0 none;
+  margin-left: 3px;
+  margin-right: 3px;
+  margin-top: 6px;
+  position: relative;
+  top: -6px; }
+  body .WB_feed_handle .WB_handle .WB_row_line li a {
+    margin-left: 3px;
+    margin-right: 3px;
+    background-color: rgba(0, 0, 0, 0.06); }
+    body .WB_feed_handle .WB_handle .WB_row_line li a:hover {
+      background-color: rgba(0, 0, 0, 0.06); }
+body .WB_row_line .line {
+  border-left: 0 none; }
+
+body .WB_feed .WB_cardtitle_b {
+  height: 48px;
+  line-height: 48px;
+  border-top: solid 1px rgba(0, 0, 0, 0.1);
+  border-radius: 0; }
+  body .WB_feed .WB_cardtitle_b .main_title {
+    position: relative;
+    top: 1px; }
 
 /*# sourceMappingURL=weibo.css.map */
