--- a/weibo.scss
+++ b/weibo.scss
@@ -1,3 +1,17 @@
+// $c: #F2F2F5;
+$c: rgba(black, 0.06);
+
+@mixin with-bg {
+  position:relative;
+  &:before {
+    content:"";
+    position:absolute;
+    top:0;right:0;bottom:0;left:0;
+    background-color:$c;
+    pointer-events: none;
+  }
+}
+
 body {
   // 调整 feed 间距
   .WB_feed_detail {
@@ -78,10 +92,10 @@ body {
         height: 75px + 62px;
 
         .headpic {
-          $w:100px; // 原来是 60
+          $w:90px; // 原来是 60
           width:$w;height:$w;
           margin-left: -$w/2;
-          bottom:0;
+          bottom:9px;
 
           a img {
             width:$w !important;
@@ -96,6 +110,7 @@ body {
       }
       .WB_innerwrap {
         padding-top:10px; // 原来是 16px
+        padding-top:1px;
         .nameBox {
           padding-top: 0;
         }
@@ -128,6 +143,7 @@ body {
       .expand {
         padding: 14px;
         font-size: 14px;
+        line-height: 21px;
       }
     }
   }
@@ -287,7 +303,13 @@ body {
   }
 
   .WB_tab_a .tab li.curr {
-    background-color:#fff;
+    // background-color:#fff;
+    span.t {
+      padding-bottom: 7px;
+    }
+    span.b {
+      display: none;
+    }
   }
 
   .WB_tab_a .tab li.S_bg2, .WB_tab_a .tab li.curr .b .b1 em i {
@@ -306,13 +328,32 @@ body {
     margin-top: 0;
     border-radius:0;
     padding:0 10px 10px;
-    // background-color: #fff;
+    background-color: transparent;
+    box-shadow:none;
+    position:relative;
+    @include with-bg;
+    height:40px;
 
     a {
+      z-index:2;
+      position:absolute;
       background-color: #fff8bf;
       border-radius: 2px;
-      height:40px !important;
+      height:40px !important;top:0;left:10px;right:10px;
       line-height:40px !important;
+      color:darken(#FFCC3F, 30%);
+      font-size:14px;
+      &:hover {
+        background-color: darken(#fff8bf, 6%);
+        color:darken(#FFCC3F, 36%);
+      }
+    }
+
+    + .WB_feed {
+      margin-top:-50px;
+      .WB_cardwrap {
+        padding-top:50px;
+      }
     }
   }
 
@@ -325,44 +366,30 @@ body {
     > .WB_cardwrap:first-child {
       border-radius:0 0 2px 2px;
       box-shadow:-1px 0 0px rgba(0,0,0,0.04), 1px 0 0px rgba(0,0,0,0.04), 0 1px 0px rgba(0,0,0,0.04);
-      border-top:solid 1px #F2F2F5;
+      // border-top:solid 1px rgba(black, 0.1);
     }
   }
 }
 
-$c: #F2F2F5;
 
 // 合并后的页签背景色
 body {
-  .WB_tab_a .tab li {
-    background-color:$c;
+  .WB_tab_a .tab li a .t{
+    @include with-bg;
   }
-  .WB_tab_a .tab li a .t {
-    background-color:$c;
-  }
+
   .WB_tab_a .tab li a .b {
-    opacity:0 !important;
-  }
-  .WB_tab_a .tab li.curr {
-    background-color:$c;
-  }
-  .WB_notes {
-    background-color:$c;
+    @include with-bg;
+    height:7px;
+    span {opacity:0 !important;}
   }
   .WB_tab_a {
     .tab_box_a {
       .fr_box {
-        height:58px;
-        background-color:$c;
+        @include with-bg;
       }
     }
   }
-
-  // #v6_pl_content_homefeed {
-  //   .WB_tab_a {
-  //     border-bottom: solid 1px #ddd;
-  //   }
-  // }
 
   .WB_cardwrap[node-type=feed_list_timeTip] {
     background-color: rgba(white, 0.8);
@@ -379,5 +406,83 @@ body {
     height:58px;line-height:58px;
     background-color:$c;
     border-radius:2px 2px 0 0;
+  }
+}
+
+// 个人信息区块下方导航，颜色替换
+body {
+  #v6_pl_rightmod_myinfo .W_person_info .WB_innerwrap .user_atten {
+    $h:51px;
+    margin-left:-13px;
+    margin-right:-13px;
+    height:$h;
+    li {
+      border:0 none !important;
+      width:percentage(1/3);
+      position:relative;
+      a {
+        margin:0 3px;
+        height:$h;
+        border-radius:2px !important;
+        // strong {
+        //   color:rgba(white, 0.8);
+        // }
+        background-color:$c;
+        // background-color:#555;
+        strong {
+          padding-top:6px;
+          margin-bottom:6px;
+          width:auto;
+        }
+
+        &:hover{background-color:darken($c, 2%);}
+      }
+    }
+  }
+
+  .W_person_info .WB_innerwrap {
+    padding-bottom:1px;
+  }
+}
+
+// 查看更多，颜色替换
+body .WB_cardmore {
+  margin:6px 6px 0;
+  background-color:$c;
+  border-top:0 none;
+  position:relative;
+  top:-6px;
+  &:hover{background-color:darken($c, 5%);}
+}
+
+body {
+  .WB_feed_handle .WB_handle .WB_row_line {
+    border-top:0 none;
+    margin-left:3px;
+    margin-right:3px;
+    margin-top:6px;
+    position:relative;
+    top:-6px;
+
+    li a {
+      margin-left:3px;margin-right:3px;
+      background-color:$c;
+      &:hover{background-color:darken($c, 5%);}
+    }
+  }
+  .WB_row_line .line {
+    border-left:0 none;
+  }
+}
+
+// 好友圈
+body {
+  .WB_feed .WB_cardtitle_b {
+    height:48px;line-height:48px;
+    border-top:solid 1px rgba(black, 0.1);
+    border-radius:0;
+    .main_title {
+      position:relative;top:1px;
+    }
   }
 }
