--- a/weibo.scss
+++ b/weibo.scss
@@ -351,7 +351,7 @@ body {
 
     + .WB_feed {
       margin-top:-50px;
-      .WB_cardwrap {
+      .WB_cardwrap:first-child {
         padding-top:50px;
       }
     }
