--- a/weibo.scss
+++ b/weibo.scss
@@ -368,6 +368,24 @@ body {
       box-shadow:-1px 0 0px rgba(0,0,0,0.04), 1px 0 0px rgba(0,0,0,0.04), 0 1px 0px rgba(0,0,0,0.04);
       // border-top:solid 1px rgba(black, 0.1);
     }
+
+    > .WB_notes {
+      margin-bottom: 0;
+      padding-top:10px;
+      position:relative;
+      .wrap {
+        background-color: #fff8bf;
+        border-radius:2px;
+        position:relative;
+        z-index:3;
+      }
+
+      + .WB_cardwrap {
+        margin-top: -60px;
+        padding-top: 60px;
+        border-radius: 0 0 2px 2px;
+      }
+    }
   }
 }
 
@@ -392,7 +410,7 @@ body {
   }
 
   .WB_cardwrap[node-type=feed_list_timeTip] {
-    background-color: rgba(white, 0.8);
+    opacity:0.8;
     .WB_cardtitle_a {
       height:40px;line-height:40px;
       font-size:14px;
