--- a/chrome/css/remove_ads.scss
+++ b/chrome/css/remove_ads.scss
@@ -36,5 +36,11 @@ html.weibo_adjust_enabled {
     #v6_pl_rightmod_ads36 {
       display: none !important;
     }
+    #v6_TrustPagelet_Recom_MusicRank {
+      display: none !important;
+    }
+    .WB_ad_tm2015 {
+      display: none !important;
+    }
   }
 }
