--- a/chrome/css/remove_ads.css
+++ b/chrome/css/remove_ads.css
@@ -14,5 +14,9 @@ html.weibo_adjust_enabled body #v6_pl_rightmod_ads35 {
   display: none !important; }
 html.weibo_adjust_enabled body #v6_pl_rightmod_ads36 {
   display: none !important; }
+html.weibo_adjust_enabled body #v6_TrustPagelet_Recom_MusicRank {
+  display: none !important; }
+html.weibo_adjust_enabled body .WB_ad_tm2015 {
+  display: none !important; }
 
 /*# sourceMappingURL=remove_ads.css.map */
